--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Configure AWS credentials using OIDC
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::<AWS_ACCOUNT_ID>:role/github-terraform-role
+          role-to-assume: arn:aws:iam::590183821247:role/github-terraform-role
           aws-region: us-east-1
 
       - run: terraform init
